--- a/assets/css/2-layouts/layout.scss
+++ b/assets/css/2-layouts/layout.scss
@@ -111,13 +111,13 @@
 }
 
 #wrap {
-  min-height:100%;
+  //height:100vh;
   position:relative;
 }
 
 #container {
 	margin:0 auto;
-	max-width: 730px;
+	max-width: 65%;
 	padding: 0 1.5rem;
 }
 
@@ -251,10 +251,10 @@ img[title="Emerald"] {
 
 /* Footer */
 footer {
-  position:absolute;
-  bottom:0;
-  width:100%;
-  height:60px;   /* Height of the footer */
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: $main-color;
   color: $background-color;
   text-align: center;
