--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,1 @@
-<header id="header">
-	<a href="/">
-	  <h1>t0nylombardi</h1>
-	</a>
-</header>
+<header id="header"><a href="/"><h1>t0nylombardi</h1></a></header>
