--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,2 +1,1 @@
-<a href="https://github.com/KingFelix/emerald/archive/master.zip">Download</a>
-<a href="https://github.com/KingFelix/emerald">Project on Github</a>
+<a href="https://github.com/t0nylombardi">Github</a><a href="https://twitter.com/t0nylombardi">@t0nylombardi</a>
