--- a/_jadefiles/link.jade
+++ b/_jadefiles/link.jade
@@ -1,2 +1,3 @@
-a(href="https://github.com/KingFelix/emerald/archive/master.zip") Download
-a(href="https://github.com/KingFelix/emerald") Project on Github<
+
+a(href="https://github.com/t0nylombardi") Github
+a(href="https://twitter.com/t0nylombardi") @t0nylombardi
