restructured assets folder

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,8 @@ layout: default
   </header>
 
   <section class="post">
-    {{ content }}
+    xx
+    {{ content | truncate words:45 }}
   </section>
 
 </article>
