--- a/assets/css/uno.css
+++ b/assets/css/uno.css
@@ -1032,7 +1032,7 @@ pre {
 	border: 1px solid #c9e1f6; */
 	border-radius: 3px;
 	font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-	font-size: .9em;
+	font-size: 1.1em;
 	font-weight: normal;
 	line-height: 1.3em; }
 	pre code {
@@ -1099,7 +1099,7 @@ pre {
 .content-wrapper {
 	z-index: 800;
 	width: 60%;
-	max-width: 800px;
+	max-width: 900px;
 	margin-left: 40%; }
 
 .content-wrapper__inner {
@@ -1170,7 +1170,7 @@ hr {
 	border-radius: 3px;
 	text-align: center; }
 .post pre {
-	width: 95%; }
+	width: 100%; }
 .post hr {
 	display: block;
 	width: 30%;
@@ -1225,9 +1225,9 @@ hr {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: rgba(68, 68, 68, 0.6);
-	background-image: -webkit-linear-gradient(-410deg, rgba(68, 68, 68, 0.6) 20%, rgba(0, 0, 0, 0.9));
-	background-image: linear-gradient(140deg,rgba(68, 68, 68, 0.6) 20%, rgba(0, 0, 0, 0.9)); }
+	background-color: rgba(68, 68, 68, 0.4);
+	background-image: -webkit-linear-gradient(-410deg, rgba(68, 68, 68, 0.3) 20%, rgba(0, 0, 0, 0.7));
+	background-image: linear-gradient(140deg,rgba(68, 68, 68, 0.3) 20%, rgba(0, 0, 0, 0.7)); }
 
 .panel-cover__logo {
 	margin-bottom: .2em; }
