--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ pre.highlight code,
   white-space: pre-wrap;
 }
 
-.btn, 
+.btn,
 .navigation__item a {
   margin: 5px 0;
   white-space: nowrap;
@@ -39,6 +39,10 @@ pre.highlight code,
 
 .post-meta__tags {
   font-size: 12px;
+  padding: 0 5px;
+}
+
+.post-meta__tags a {
   padding: 0 5px;
 }
 
