--- a/web/src/index.css
+++ b/web/src/index.css
@@ -24,27 +24,67 @@ hr {
 .blog__wrapper {
   display: grid;
   grid-template-columns: auto 1fr;
-  /* min-height: 100vh !important; */
 }
 
-.blog__grid {
-  /* grid-area: 1 / 1 / 2 / 2; */
-}
 
 .front-panel__container {
   min-height: 100vh !important;
   overflow: hidden;
-  /* z-index: 500; */
 }
 
 .blog__container {
-  /* margin-left: 45rem; */
-  /* width: 100%; */
-  /* z-index: 400; */
+  margin: 3rem 5rem;
 }
 
 
 
 .blog-social {
   margin: 0 auto !important;
+}
+
+.post-list {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	text-align: left; }
+	.post-list li {
+		margin: 0 0 2.2em 0; }
+		.post-list li:last-child hr {
+			display: none; }
+
+.post-list__post-title {
+	margin-top: 0;
+	margin-bottom: .2em;
+	font-size: 1.5em;
+  line-height: 1.3em;
+}
+
+.post-list__post-title a {
+  color: #333333;
+}
+
+.post-list__post-title a:hover {
+  color: #b9301c;
+}
+
+.post-list__meta {
+	display: block;
+	margin: .7em 0 0 0;
+	font-size: .9em;
+  color: #c7c7c7;
+}
+
+.post-list__meta--date {
+	margin-right: .5em;
+  color: #c7c7c7;
+}
+
+.post-list__meta--tags {
+  margin-left: .5em;
+}
+
+.post-list__divider {
+	width: 30%;
+	margin: 2.2em 0 2.1em 0;
+  border-top: 1px solid #dddddd;
 }
