--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -26478,11 +26478,27 @@ video {
           animation: bounce 1s infinite;
 }
 
+.text-shadow {
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.text-shadow-md {
+  text-shadow: 0 4px 8px rgba(0, 0, 0, 0.32), 0 2px 4px rgba(0, 0, 0, 0.08);
+}
+
+.text-shadow-lg {
+  text-shadow: 0 15px 30px rgba(0, 0, 0, 0.51), 0 5px 15px rgba(0, 0, 0, 0.8);
+}
+
+.text-shadow-none {
+  text-shadow: none;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -52314,6 +52330,22 @@ code {
     -webkit-animation: bounce 1s infinite;
             animation: bounce 1s infinite;
   }
+
+  .sm\:text-shadow {
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  }
+
+  .sm\:text-shadow-md {
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.32), 0 2px 4px rgba(0, 0, 0, 0.08);
+  }
+
+  .sm\:text-shadow-lg {
+    text-shadow: 0 15px 30px rgba(0, 0, 0, 0.51), 0 5px 15px rgba(0, 0, 0, 0.8);
+  }
+
+  .sm\:text-shadow-none {
+    text-shadow: none;
+  }
 }
 
 @media (min-width: 768px) {
@@ -78137,6 +78169,22 @@ code {
   .md\:animate-bounce {
     -webkit-animation: bounce 1s infinite;
             animation: bounce 1s infinite;
+  }
+
+  .md\:text-shadow {
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  }
+
+  .md\:text-shadow-md {
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.32), 0 2px 4px rgba(0, 0, 0, 0.08);
+  }
+
+  .md\:text-shadow-lg {
+    text-shadow: 0 15px 30px rgba(0, 0, 0, 0.51), 0 5px 15px rgba(0, 0, 0, 0.8);
+  }
+
+  .md\:text-shadow-none {
+    text-shadow: none;
   }
 }
 
@@ -103962,6 +104010,22 @@ code {
     -webkit-animation: bounce 1s infinite;
             animation: bounce 1s infinite;
   }
+
+  .lg\:text-shadow {
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  }
+
+  .lg\:text-shadow-md {
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.32), 0 2px 4px rgba(0, 0, 0, 0.08);
+  }
+
+  .lg\:text-shadow-lg {
+    text-shadow: 0 15px 30px rgba(0, 0, 0, 0.51), 0 5px 15px rgba(0, 0, 0, 0.8);
+  }
+
+  .lg\:text-shadow-none {
+    text-shadow: none;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -129785,5 +129849,21 @@ code {
   .xl\:animate-bounce {
     -webkit-animation: bounce 1s infinite;
             animation: bounce 1s infinite;
+  }
+
+  .xl\:text-shadow {
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  }
+
+  .xl\:text-shadow-md {
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.32), 0 2px 4px rgba(0, 0, 0, 0.08);
+  }
+
+  .xl\:text-shadow-lg {
+    text-shadow: 0 15px 30px rgba(0, 0, 0, 0.51), 0 5px 15px rgba(0, 0, 0, 0.8);
+  }
+
+  .xl\:text-shadow-none {
+    text-shadow: none;
   }
 }
