--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,23 @@
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-size: 1em;
+  color: #666666;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h5 {
+  margin-top: 0.8em;
+  margin-bottom: 0.4em;
+  font-family: "Roboto Slab", serif;
+  font-weight: lighter;
+  color: #333333;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
@@ -72,4 +83,8 @@ hr {
   width: 30%;
   margin: 2.2em 0 2.1em 0;
   border-top: 1px solid #dddddd;
+}
+
+.socials button {
+  margin: 0.5rem;
 }
