--- a/src/index.css
+++ b/src/index.css
@@ -10816,6 +10816,10 @@ video {
   text-shadow: none;
 }
 
+:focus {
+  outline: 0;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   font-size: 1em;
