--- a/src/App.css
+++ b/src/App.css
@@ -37,43 +37,11 @@ code {
 hr {
   display: block;
   unicode-bidi: isolate;
-  margin-block-start: 0.5em;
-  margin-block-end: 0.5em;
+  margin-block-start: 0.5rem;
+  margin-block-end: 0.5rem;
   margin-inline-start: auto;
   margin-inline-end: auto;
   overflow: hidden;
   border-style: inset;
   border-width: 1px;
-}
-
-.posts-list-loader svg {
-  width: 100%;
-  height: 100%;
-}
-
-.post-list-meta {
-  display: block;
-  margin: 0.7em 0 0 0;
-  color: #c7c7c7;
-}
-
-.post-list-meta time {
-  margin-right: 0.5rem;
-}
-
-.post-list-meta span {
-  padding: 0 5px;
-}
-
-.post-list-meta a {
-  color: #e25440;
-}
-.post-list-meta a:hover {
-  color: #b9301c;
-}
-
-.post-list-divider {
-  width: 30%;
-  margin: 2.2em 0 2.1em 0;
-  border-top: 1px solid #dddddd;
 }
