--- a/styles/resume.css
+++ b/styles/resume.css
@@ -8,7 +8,7 @@
 }
 
 .resume hr {
-  background-color: black;
+  background-color: #b9301c;
   margin: 0.8rem 0 1.2rem 0;
   width: 40px;
   height: 0.3rem;
