--- a/styles/resume.css
+++ b/styles/resume.css
@@ -9,6 +9,7 @@
 
 .resume hr {
   background-color: #b9301c;
+  border: 1px solid #b9301c;
   margin: 0.8rem 0 1.2rem 0;
   width: 40px;
   height: 0.3rem;
